src/objects/DeveloperWorkItem__c.object
<CustomObject>
    <fields>
        <fullName>CodeReviewingHours__c</fullName>
        <label>Code Reviewing Hours</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CodingHours__c</fullName>
        <label>Coding Hours</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DeveloperCost__c</fullName>
        <label>Developer Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TechnicalDesignHours__c</fullName>
        <label>Technical Design Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkOrder__c</fullName>
        <label>Work Order</label>
        <referenceTo>WorkOrder__c</referenceTo>
        <relationshipLabel>Developer Work Items</relationshipLabel>
        <relationshipName>DeveloperWorkItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Developer Work Item</label>
    <nameField>
        <label>Developer Work Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Developer Work Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>